--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,30 +7,33 @@ on:
 jobs:
   smoke-tests:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
       - name: Install dependencies
         run: npm ci
 
+      - name: Install jq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+
       - name: Start dev server
-        run: npm run dev &
-      
+        run: npm run dev --if-present &
+
       - name: Wait for server
         run: npx wait-on http://localhost:3000/api/health
 
-      - name: Smoke tests (positive & negative)
+      - name: Run smoke tests
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          RECALL_THRESHOLD: 0.75
+          RECALL_THRESHOLD: ${{ secrets.RECALL_THRESHOLD }}
           CHAT_MODEL: gpt-4o-mini
-        run: |
-          ./scripts/smoke-test.sh
-          # negative test: expect 400
-          status=$(curl -s -o /dev/null -w "%{http_code}" -X POST http://localhost:3000/api/shrink \
-            -H "Content-Type: application/json" \
-            -d '{}')
-          if [ "$status" -ne 400 ]; then
-            echo "Expected 400 for missing prompt, got $status"
-            exit 1
-          fi
+        run: ./scripts/smoke-test.sh
