Add embedded therapy corpus and enable recall integration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shrink-chat",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --hostname 0.0.0.0 --port 3000",
     "build": "next build",
@@ -16,6 +17,7 @@
     "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "openai": "^4.95.1",
