--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.9.7",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "openai": "^4.95.1",
