Add RAG pipeline, filter utils, fallback handlers, test scripts, and expanded corpus

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
       "ES2020",
       "DOM"
     ],
-    "types": [
-      "node"
-    ],
+    "types": ["jest", "node"],
+
+    
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
