--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev --hostname 0.0.0.0 --port 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
@@ -17,7 +18,6 @@
     "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.7",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
@@ -36,9 +36,16 @@
     "@types/node": "^20.17.32",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@types/supertest": "^6.0.3",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "jest": "^29.7.0",
+    "next-test-api-route-handler": "^4.0.16",
+    "node-mocks-http": "^1.17.2",
+    "supertest": "^7.1.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
