--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "shrink-chat",
   "version": "0.1.0",
@@ -46,6 +47,7 @@
     "node-mocks-http": "^1.17.2",
     "supertest": "^7.1.0",
     "tailwindcss": "^4",
+    "tailwindcss-animate": "^1.0.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
