--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+// File: tsconfig.json
 {
   "compilerOptions": {
     "strict": true,
@@ -5,22 +6,13 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "lib": [
-      "ES2020",
-      "DOM"
-    ],
+    "lib": ["ES2020", "DOM"],
     "types": ["jest", "node"],
-
-    
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    }
-    // …other existing settings…
-    ,
+      "@/*": ["src/*"]
+    },
     "target": "ES2017",
     "allowJs": true,
     "noEmit": true,
@@ -41,7 +33,5 @@
     "src/types/**/*.d.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
