--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "shrink-chat",
   "version": "0.1.0",
@@ -9,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "tw": "tailwind"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
@@ -33,20 +33,22 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/cli": "^4.1.7",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.32",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@types/supertest": "^6.0.3",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "jest": "^29.7.0",
     "next-test-api-route-handler": "^4.0.16",
     "node-mocks-http": "^1.17.2",
+    "postcss": "^8.5.3",
     "supertest": "^7.1.0",
-    "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
