feat: implement WhenIWas font family and improve gitignore
- Replace ABSans/Sprat fonts with WhenIWas font family
- Add complete font weight range: Light (300), Regular (400), Medium (500), Bold (700), Variable (100-900)
- Update all CSS files to use WhenIWas: fonts.css, globals.css, onboarding-styles.css
- Add comprehensive font utility classes (.font-wheniwas-*)
- Create font-test.html for visual verification
- Clean up old font files (ApfelGrotezk placeholders)
- Enhance .gitignore to exclude development documentation files
- Keep only essential docs: README.md and WHENIWAS_FONT_CONFIGURATION_COMPLETE.md
- Remove tracked documentation artifacts from version control

Typography improvements:
- Professional WhenIWas font provides better readability
- Complete weight hierarchy for design flexibility
- Optimized font loading with font-display: swap
- Consistent typography across all components

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,28 @@ next-env.d.ts
 venv/
 
 .env*.local
+
+# Development documentation files
+*_FONT_CONFIGURATION_COMPLETE.md
+*_STATUS_REPORT.md
+*_COMPLETE.md
+*_ANALYSIS_COMPLETE.md
+*_FINAL_REPORT.md
+*_INVESTIGATION_COMPLETE.md
+*_FIX_COMPLETE.md
+*_SYSTEM_FINAL_STATUS.md
+*_VULNERABILITY_WORKAROUND.md
+*_FIX_SUMMARY.md
+*_FLOW_DIAGRAM.md
+USER_ID_*.md
+VERIFICATION_COMPLETE.md
+CLEANUP_COMPLETE.md
+MISSION_COMPLETE_FINAL_REPORT.md
+ONBOARDING_*.md
+SCHEMA_*.md
+SECURITY_*.md
+RACE_CONDITION_*.md
+
+# Keep specific documentation
+!WHENIWAS_FONT_CONFIGURATION_COMPLETE.md
+!README.md
